2015-03-16  Mike Frysinger  <vapier@gentoo.org>

	* config.in, configure: Regenerate.

2015-03-16  Jiri Gaisler  <jiri@gaisler.se>

	* Makefile.in (end, end.h): Remove target rules.
	(clean): Remove end and end.h.
	(erc32.o, exec.o, float.o, func.o, help.o, interf.o, sis.o): Delete
	rules.
	* configure, config.in: Regenerate.
	* configure.ac: Use SIM_AC_OPTION_HOSTENDIAN
	* end.c: Delete.
	* erc32.c: Remove end.h include.
	* exec.c: Remove end.h include. Use HOST_LITTLE_ENDIAN.
	* func.c, sis.c: Likewise.

2015-03-14  Mike Frysinger  <vapier@gentoo.org>

	* Makefile.in (SIM_RUN_OBJS): Set to sis.o.

2015-03-14  Mike Frysinger  <vapier@gentoo.org>

	* configure.ac (AC_CHECK_HEADERS): Delete.
	* aclocal.m4, configure: Regenerate.

2015-02-22  Jiri Gaisler  <jiri@gaisler.se>

	* Makefile.in: Add include path to readline.h.
	sis.c: Remove locally define readline types.

2015-02-21  Jiri Gaisler  <jiri@gaisler.se>

	* func.c (reset_stat, show_stat): Switch to double in time keeping.
	(get_time): New function to get system time.
	* interf.c (run_sim): Use get_time() for system time.
	* sis.c (run_sim): Likewise.
	* sis.h: Likewise.

2015-02-21  Jiri Gaisler  <jiri@gaisler.se>

	* Makefile.in: Remove unused defines

2015-02-21  Jiri Gaisler  <jiri@gaisler.se>

	* float.c (get_accex, clear_accex, set_fsr): Use functions from fenv.h
	instead of custom assembly.

2015-02-21  Jiri Gaisler  <jiri@gaisler.se>

	* erc32.c (mec_read): Allow simulator memory size to be read
	by application.
	(boot_init): initialize memory and timers if start address is
	not 0.
	* func.c (exe_cmd): Call boot_init if start address not 0.
	* interf.c (run_sim): Likewise.

2015-02-21  Jiri Gaisler  <jiri@gaisler.se>

	* exec.c (init_regs): erc32 has vendor ID 1 and version ID 1 in %psr.

2015-02-21  Jiri Gaisler  <jiri@gaisler.se>

	* func.c (print_insn_sparc_sis): Add helper function for disassembly.
	(disp_ctrl): Use helper function.

2014-08-19  Alan Modra  <amodra@gmail.com>
